@startuml

title __CONTENTPROVIDER's Class Diagram__\n

  namespace cz.utb.thesisapp {
    namespace contentProvider {
      class cz.utb.thesisapp.contentProvider.CSVWriter {
          {static} + DEFAULT_ESCAPE_CHARACTER : char
          {static} + DEFAULT_LINE_END : String
          {static} + DEFAULT_QUOTE_CHARACTER : char
          {static} + DEFAULT_SEPARATOR : char
          {static} + NO_ESCAPE_CHARACTER : char
          {static} + NO_QUOTE_CHARACTER : char
          - escapechar : char
          - lineEnd : String
          - pw : PrintWriter
          - quotechar : char
          - separator : char
          + CSVWriter()
          + CSVWriter()
          + close()
          + flush()
          + writeNext()
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace contentProvider {
      class cz.utb.thesisapp.contentProvider.DbHelper {
          {static} - CREATE_TABLE_LOCAL : String
          {static} - CREATE_TABLE_REMOTE : String
          {static} - DATABASE_VERSION : int
          {static} - DROP_TABLE_LOCAL : String
          {static} - DROP_TABLE_REMOTE : String
          {static} - TAG : String
          + DbHelper()
          + onCreate()
          + onUpgrade()
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace contentProvider {
      class cz.utb.thesisapp.contentProvider.MyContentProvider {
          {static} + CONTENT_LOCAL_URI : Uri
          {static} + CONTENT_REMOTE_URI : Uri
          {static} - ALL_TOUCHES_LOCAL : int
          {static} - ALL_TOUCHES_REMOTE : int
          {static} - AUTHORITY : String
          {static} - SINGLE_TOUCH_LOCAL : int
          {static} - SINGLE_TOUCH_REMOTE : int
          {static} - TAG : String
          {static} - uriMatcher : UriMatcher
          + delete()
          + getType()
          + insert()
          + onCreate()
          + query()
          + update()
      }
    }
  }
  

  cz.utb.thesisapp.contentProvider.DbHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  cz.utb.thesisapp.contentProvider.MyContentProvider -up-|> android.content.ContentProvider
  cz.utb.thesisapp.contentProvider.MyContentProvider o-- cz.utb.thesisapp.contentProvider.DbHelper : dbHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
